first page mobile section

--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
                 <span id="on">ON</span>
             </div>
         </div>
-        <div class="buttons-container">
-            <i class="fas fa-bars bars"></i>
-            <i class="fas fa-times times"></i>
+        <div class="hamburger-button">
+            <span></span>
+            <span></span>
+            <span></span>
         </div>
     </header>
 
@@ -65,23 +66,44 @@
                         <i class="social-icons-menu fa-brands fa-linkedin-in"></i>
                     </a>
                 </li>
-
                 <li>
                     <a href="https://github.com/Alzubair98">
                         <i class="social-icons-menu fab fa-github"></i>
                     </a>
                 </li>
-
                 <li>
                     <a href="https://www.instagram.com/py_zubair/">
                         <i class="social-icons-menu fa-brands fa-instagram"></i>
                     </a>
                 </li>
-               
             </ul>
-
         </div>
     </aside>
+
+    <!-- text section 1  -->
+    <section id="section-home" class="section-home">
+        <div class="text-zone">
+            <h1>Hi,<br>I'm 
+                <img class="text-logo-img" src="images/logo1.png" alt="logo-img">lzubair,<br>Web Developer</h1>
+            <p class="gray-text">Full Stack Developer</p>
+            <br>
+
+            <button class="contact-button">Contact me!</button>
+        </div>
+
+        <div class="scroll-down">
+            <span>scroll down</span>
+            <i class="fas fa-arrow-down"></i>
+        </div>
+
+        <div class="scroll-down scroll-down-left">
+            <span>scroll down</span>
+            <i class="fas fa-arrow-down"></i>
+        </div>
+
+    </section>
+    <script src="index.js"></script>
+
     
 </body>
 </html>
