completing first page

--- a/index.html
+++ b/index.html
@@ -42,12 +42,13 @@
             <div class="logo-section">
                 <a class="logo" href="#" rel="home">
                     <img class="logo-img" src="images/logo1.png" alt="logo">
-                    <span>Alzuabair</span>
+                    <span class="name-span">Alzubair</span>
                 </a>
                 <span>Web Developer</span>
             </div>
 
             <nav class="nav-links">
+                <hr class="hr-nav-links">
                 <a href="#">About</a>
                 <hr class="hr-nav-links">
                 <a href="#">My Skills</a>
@@ -85,7 +86,7 @@
         <div class="text-zone">
             <h1>Hi,<br>I'm 
                 <img class="text-logo-img" src="images/logo1.png" alt="logo-img">lzubair,<br>Web Developer</h1>
-            <p class="gray-text">Full Stack Developer</p>
+            <p class="gray-text">Full Stack Developer - Front-End Developer</p>
             <br>
 
             <button class="contact-button">Contact me!</button>
