add work section

--- a/index.html
+++ b/index.html
@@ -101,8 +101,35 @@
             <span>scroll down</span>
             <i class="fas fa-arrow-down"></i>
         </div>
-
     </section>
+
+    <section id="work-section">
+        <div id="header">
+            <h2 class="light" data-text="My Portfolio">My Portfolio</h2>
+        </div>
+        <div class="text-zone-2">
+            <div>
+                <p>some of my project that i have made alone, and some of them are done with amazing people 
+                    while taking the microverse course
+                    <br>
+                    interseted to see more? Visit <a href="https://github.com/Alzubair98">my work</a>
+                </p>
+            </div>
+            <button class="contact-button">See more!</button>
+        </div>
+        <div class="fake-big-work">Work</div>
+    </section>
+
+    <!-- work section  -->
+
+    <div class="work-gallery"> 
+
+    </div>
+
+
+
+
+
     <script src="index.js"></script>
 
     
